--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,42 +67,126 @@
 
             <!-- 크기 임의로 지정 -->
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_idcard"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginRight="50dp"
-                android:background="@color/blue"
-                android:text="주민등록증/운전면허증"
-                android:textColor="@color/white"
-                android:tag="idcard"
-                />
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_passport"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:paddingTop="25dp"
+                android:paddingHorizontal="50dp"
+                >
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_idcard"
+                    android:layout_width="@dimen/btn_width"
+                    android:layout_height="match_parent"
+                    android:background="@color/blue"
+                    android:tag="idcard"
+                    android:text="주민등록증/운전면허증"
+                    android:textSize="12dp"
+                    android:textColor="@color/white"
+                    android:layout_weight="1"/>
+
+                <Space
+                    android:layout_width="@dimen/space_width"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                     />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_idcard_ssa"
+                    android:layout_width="@dimen/btn_width"
+                    android:layout_height="match_parent"
+                    android:background="@color/blue"
+                    android:tag="idcard-ssa"
+                    android:text="주민등록증/운전면허증\n + 사본판별"
+                    android:textColor="@color/white"
+                    android:layout_weight="1"
+                    android:textSize="12dp"
+                    />
+
+            </LinearLayout>
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginRight="50dp"
-                android:background="@color/blue"
-                android:text="국내여권/해외여권"
-                android:textColor="@color/white"
-                android:tag="passport"
-                />
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_alien"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:paddingTop="25dp"
+                android:paddingHorizontal="50dp"
+                >
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_passport"
+                    android:tag="passport"
+                    android:text="국내여권/해외여권"
+                    android:layout_width="@dimen/btn_width"
+                    android:layout_height="match_parent"
+                    android:background="@color/blue"
+                    android:textSize="12dp"
+                    android:textColor="@color/white"
+                    android:layout_weight="1"/>
+
+                <Space
+                    android:layout_width="@dimen/space_width"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_passport_ssa"
+                    android:tag="passport-ssa"
+                    android:text="국내여권/해외여권\n+ 사본판별"
+                    android:layout_width="@dimen/btn_width"
+                    android:layout_height="match_parent"
+                    android:background="@color/blue"
+                    android:textColor="@color/white"
+                    android:layout_weight="1"
+                    android:textSize="12dp"
+                    />
+
+            </LinearLayout>
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginRight="50dp"
-                android:background="@color/blue"
-                android:text="외국인등록증"
-                android:textColor="@color/white"
-                android:tag="alien"
-                />
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:paddingTop="25dp"
+                android:paddingHorizontal="50dp"
+                >
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_alien"
+                    android:text="외국인등록증"
+                    android:tag="alien"
+                    android:layout_width="@dimen/btn_width"
+                    android:layout_height="match_parent"
+                    android:background="@color/blue"
+                    android:textSize="12dp"
+                    android:textColor="@color/white"
+                    android:layout_weight="1"/>
+
+                <Space
+                    android:layout_width="@dimen/space_width"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_alien_ssa"
+                    android:text="외국인등록증\n+ 사본판별"
+                    android:tag="alien-ssa"
+                    android:layout_width="@dimen/btn_width"
+                    android:layout_height="match_parent"
+                    android:background="@color/blue"
+                    android:textColor="@color/white"
+                    android:layout_weight="1"
+                    android:textSize="12dp"
+                    />
+
+            </LinearLayout>
+
+
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_credit"
                 android:layout_width="match_parent"
@@ -115,6 +199,7 @@
                 android:textColor="@color/white"
                 android:tag="credit"
                 />
+
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
