[FIX] 암호화 기능 사용 시 이미지 미표시

--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -101,7 +101,15 @@
                     android:layout_marginTop="8dp"
                     android:visibility="gone"
                     />
-
+                <TextView
+                    android:id="@+id/textEncryptedMaskImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textSize="12sp"
+                    android:textColor="?android:textColorPrimary"
+                    android:visibility="gone"
+                    />
                 <TextView
                     android:id="@+id/textOriginalImage"
                     android:layout_width="wrap_content"
@@ -119,6 +127,16 @@
                     android:layout_gravity="center"
                     android:maxHeight="200dp"
                     android:layout_marginTop="8dp"
+                    android:visibility="gone"
+                    />
+                <TextView
+                    android:id="@+id/textEncryptedOriginal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_gravity="center"
+                    android:textSize="12sp"
+                    android:textColor="?android:textColorPrimary"
                     android:visibility="gone"
                     />
             </LinearLayout>
